Added markdown url tokenizer, placeholders, and token encapsulation